Fixed some spacing issues on index.html

--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@
     src: url(fonts/OpenType-TT/Unique-Bold.ttf);
 }
 
+
 /*HABITat Theme*/
 :root {
     --primary-green: #4a7c59;
@@ -218,3 +219,10 @@ footer a {
     font-weight: bold;
     text-decoration: underline;
 }
+
+.footer-link {
+    color: var(--text-light);
+    display: flex;
+    align-items: center;
+}
+
